# wordlang

./: LICENSE  README.md  pyproject.toml
WordLang/: __init__.py  __main__.py
wordlang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
